[gd_scene load_steps=2 format=3 uid="uid://c3su5gusmiif6"]

[ext_resource type="Script" uid="uid://dj347js6rsy86" path="res://Characters/Player/player_ui.gd" id="1_lwipk"]

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lwipk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Panel" type="Panel" parent="VBoxContainer/HealthHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer/HealthHBox/Panel"]
modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
max_value = 10.0
value = 10.0
allow_greater = true
allow_lesser = true
show_percentage = false

[node name="PukePanel" type="Panel" parent="VBoxContainer/HealthHBox"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PukeBar" type="ProgressBar" parent="VBoxContainer/HealthHBox/PukePanel"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
max_value = 3.0
step = 1.0
show_percentage = false

[node name="Panel2" type="Panel" parent="VBoxContainer/HealthHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScoreLabel" type="Label" parent="VBoxContainer/HealthHBox/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Empty" type="Panel" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
